--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,10 +29,11 @@ spring:
         # https://stackoverflow.com/questions/21257819/what-is-the-difference-between-hibernate-jdbc-fetch-size-and-hibernate-jdbc-batc
         jdbc.batch_size: 20
   datasource:
-    url: jdbc:postgresql://localhost:5432/jira
+    url: jdbc:postgresql://db:5432/jira
+    driver-class-name: org.postgresql.Driver
 
   liquibase:
-    changeLog: "classpath:db/changelog.sql"
+    change-log: "classpath:db/changelog.sql"
 
   # Jackson Fields Serialization
   jackson:
@@ -83,17 +84,21 @@ spring:
           auth: true
     host: smtp.gmail.com
     port: 587
-  thymeleaf.check-template-location: false
+
+  thymeleaf:
+    prefix: file:/app/resources/view/
+    suffix: .html
+    check-template-location: false
 
   mvc.throw-exception-if-no-handler-found: true
   web.resources.add-mappings: false
 
 logging:
   level:
-    root: WARN
-    com.javarush.jira: DEBUG
-    com.javarush.jira.common.config.MvcConfig: WARN
-    org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver: DEBUG
+    root: INFO
+    com.javarush.jira: INFO
+    com.javarush.jira.common.config.MvcConfig: INFO
+    org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver: INFO
 
 server:
   #  https://springdoc.org/index.html#how-can-i-deploy-springdoc-openapi-ui-behind-a-reverse-proxy
