--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,8 +11,8 @@ spring:
   profiles:
     include: secrets
 
-  init:
-    mode: never
+#  init:
+#    mode: never
   jpa:
     show-sql: true
     open-in-view: false
@@ -89,6 +89,10 @@ spring:
     prefix: file:/app/resources/view/
     suffix: .html
     check-template-location: false
+
+  messages:
+    basename: messages
+    encoding: UTF-8
 
   mvc.throw-exception-if-no-handler-found: true
   web.resources.add-mappings: false
