--- a/pom.xml
+++ b/pom.xml
@@ -211,11 +211,11 @@
                 </plugins>
             </build>
         </profile>
-        <profile>
-            <id>test</id>
-            <properties>
-                <spring.profiles.active>test</spring.profiles.active>
-            </properties>
-        </profile>
+<!--        <profile>-->
+<!--            <id>test</id>-->
+<!--            <properties>-->
+<!--                <spring.profiles.active>test</spring.profiles.active>-->
+<!--            </properties>-->
+<!--        </profile>-->
     </profiles>
 </project>
