--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,8 +1,11 @@
 spring:
+  config:
+    activate:
+      on-profile: test
   cache:
     type: none
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:h2-test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;NON_KEYWORDS=VALUE
     driverClassName: org.h2.Driver
     username: sa
     password:
@@ -15,7 +18,12 @@ spring:
   h2:
     console:
       enabled: true
+      path: /h2-console
   sql:
     init:
-      mode: always
+      mode: embedded
       data-locations: classpath:/data-h2.sql
+  test:
+    database:
+      replace: none
+
