--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
 
   db:
     container_name: db
-    image: postgres:16
+    image: postgres:latest
     restart: always
     environment:
       POSTGRES_USER: ${DB_USERNAME}
