--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,3 +1,11 @@
+app:
+  host-url: http://localhost:8080
+  test-mail: jira4jr@gmail.com
+  templates-update-cache: 5s
+  mail-sending-props:
+    core-pool-size: 8
+    max-pool-size: 100
+
 spring:
   config:
     activate:
@@ -21,9 +29,32 @@ spring:
       path: /h2-console
   sql:
     init:
-      mode: embedded
+      mode: always
       data-locations: classpath:/data-h2.sql
   test:
     database:
       replace: none
 
+
+#  mail:
+#    properties:
+#      mail:
+#        smtp:
+#          starttls:
+#            enable: true
+#          auth: true
+#    host: smtp.gmail.com
+#    username: ${MAIL_USERNAME}
+#    password: ${MAIL_PASSWORD}
+#    port: 587
+  mail:
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+          auth: true
+    host: smtp.gmail.com
+    username: jira4jr@gmail.com
+    password: zdfzsrqvgimldzyj
+    port: 587
