--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -80,7 +80,7 @@ spring:
   sql:
     init:
       mode: always
-      data-locations: classpath:/data.sql
+#      data-locations: classpath:/data.sql
 
   mail:
     properties:
@@ -115,7 +115,6 @@ logging:
 
 server:
   #  https://springdoc.org/index.html#how-can-i-deploy-springdoc-openapi-ui-behind-a-reverse-proxy
-  port: 8080
   forward-headers-strategy: framework
   servlet:
     encoding:
