--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,12 +12,13 @@ services:
       - .env
     environment:
       - SPRING_PROFILES_ACTIVE=prod
+      - DEBUG=true
     volumes:
-      - ./resources:/app/resources
+      - server_resources:/app/resources
 
   db:
     container_name: db
-    image: postgres:latest
+    image: postgres:16
     restart: always
     environment:
       POSTGRES_USER: ${DB_USERNAME}
@@ -26,7 +27,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./db-data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${DB_USERNAME}" ]
       interval: 2s
@@ -46,10 +47,7 @@ services:
     depends_on:
       - server
 
-#volumes:
-#  db-data:
-#    driver: local
-#    driver_opts:
-#      type: none
-#      device: ./db-data
-#      o: bind
+volumes:
+  server_resources:
+  db_data:
+  nginx_config:
